--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.1",
     "aws-serverless-express": "^3.2.0",
     "body-parser": "^1.18.3",
     "compression": "^1.7.2",
